<resources>
    <string name="app_name">Bulls&amp;Cows</string>
    <string name="game_label">Where are the bulls?</string>
    <string name="stats_label">There are no top rankings yet!</string>
    <string name="bulls">Bulls</string>
    <string name="cows">Cows</string>
    <string name="menu_help">Help</string>
    <string name="menu_stats">Top Ranking</string>
    <string name="menu_update">Update</string>
    <string name="menu_reload">Reload</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_vibracion">Vibration</string>
    <string name="borrar">Delete</string>
    <string name="settings_restart_msg">The top ranking will be removed and restarted.</string>
    <string name="settings_limpiar">Delete screenshots</string>
    <string name="settings_usados">Used:</string>
    <string name="texto_ayuda">Bulls&amp;Cows is a fun reasoning number guessing game.\nAt the beginning, a number is generated and you must guess it in 10 attempts. Each of your moves will give you Bulls and Cows as a result. Each Bull is a guessed digit in the correct place, and each Cow is a guessed digit, but out of place.\nFor example, if the number generated is 0259 and you played 0329, the result will be 2 Bulls (digits 0 and 9) and 1 Cow (digit 2).</string>
    <string name="menu_about">About</string>
    <string name="k_hide">Hide</string>
    <string name="k_send">Send</string>
    <string name="time">Time</string>
    <string name="steps">Steps</string>
    <string name="title_ganador">You Won!</string>
    <string name="ingrese_nombre">Type your name</string>
    <string name="nombre">Name</string>
    <string name="enviar">Send</string>
    <string name="cancelar">Cancel</string>
    <string name="title_perdedor">You Lost!</string>
    <string name="el_numero_fue">The number was:</string>
    <string name="aceptar">OK</string>
    <string name="menu_reset">Restart</string>
    <string name="menu_share">Share</string>
    <string name="title_reset">Do you want to remove and restart the top ranking?</string>
    <string name="info_text1">Bulls&amp;Cows is based on the number guessing game \"Bulls and Cows\".\nIf you want to help with the translation into another language you can write us, we will appreciate it. Any other suggestions are also welcome.</string>
    <string name="credito">Credits:</string>
    <string name="credito_desarrollo">Development:</string>
    <string name="credito_desarrollo_y_diseno">Development\nand Design:</string>
    <string name="credito_disenno_grafico">Graphic\nDesign:</string>
    <string name="credito_contacto">Contacts:</string>
    <string name="credito_desarrollador_1" translatable="false">Fredy Mederos León.</string>
    <string name="credito_traductor_1" translatable="false">Greta Milena Mazorra Cubas.</string>
    <string name="credito_contacto_1" translatable="false">fmfredd@gmail.com</string>
    <string name="credito_title1">Bulls and Cows</string>
    <string name="credito_traduccion">Translation:</string>
    <string name="credito_version">Version:</string>
    <string name="rating">Rating:</string>
    <string name="mensaje_captura_correcta">The screenshot was saved in:</string>
    <string name="mensaje_error_guardando_captura">The screenshot could not be saved.</string>
    <string name="mensaje_error_creando_directorio">The screenshot folder could not be created on the SD card.</string>
    <string name="mensaje_error_no_existe_sd">Unable to save the screenshot on the SD card.</string>
    <string name="asunto_correo">Look at my results in</string>
    <string name="cuerpo_correo">I challenge you to improve my result.</string>
    <string name="titulo_intent_compartir">Sharing through:</string>
    <string name="mensaje_no_existen_app_para_compartir">There are no apps for sharing the screenshot.</string>
    <string name="dialog_a_eliminar">You will delete:</string>
    <string name="dialog_clean_tittle">Do you want to delete all the screenshots?</string>
    <string name="settings_limpiar_msg">Screenshots well removed.</string>
    <string name="settings_limpiar_msg_empty">The are no screenshots to remove.</string>
    <string name="settings_restart">Restart top ranking</string>
    <string name="settings_sonido">Sound</string>
    <string name="languaje">Language</string>
    <string name="lang_es" translatable="false">Español</string>
    <string name="lang_en" translatable="false">English</string>
    <string name="lang_fr" translatable="false">Francais</string>
    <string name="texto_ayuda2">Got it?\nHave fun and show your friends how good you are!</string>
    <string name="title_and">&amp;</string>
    <string name="credito_personajes1" translatable="false">Farm Tower</string>
    <string name="credito_personajes">Characters\nand background:</string>

    <!--VERSION-->
    <string name="credito_version_real" translatable="false">1.0.5</string>
    <string name="credito_team">Team:</string>
    <string name="team_name" translatable="false">www.isofact.com</string>
</resources>
