<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.asdevel.bullscows2.ui.widgets.TextViewHand
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"

                android:layout_marginTop="20dp"
                android:paddingBottom="10dp"
                android:text="@string/info_text1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/_gray_darker" />

            <com.asdevel.bullscows2.ui.widgets.TextViewHand
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:text="@string/credito"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/_red" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/_gray_dark" />

            <com.asdevel.bullscows2.ui.widgets.TextViewHand
                android:id="@+id/app_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="20dp"
                android:paddingBottom="10dp"
                android:shadowColor="@color/_black_shadow"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/_red" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.asdevel.bullscows2.ui.widgets.TextViewHand
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/credito_version"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/_gray_darker" />

                <com.asdevel.bullscows2.ui.widgets.TextViewHand
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="10dp"

                    android:text="@string/credito_version_real"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/_red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.asdevel.bullscows2.ui.widgets.TextViewHand
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/credito_desarrollo_y_diseno"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/_gray_darker" />

                <com.asdevel.bullscows2.ui.widgets.TextViewHand
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingBottom="10dp"

                    android:text="@string/credito_desarrollador_1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/_red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.asdevel.bullscows2.ui.widgets.TextViewHand
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/credito_traduccion"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/_gray_darker" />

                <com.asdevel.bullscows2.ui.widgets.TextViewHand
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingBottom="10dp"

                    android:text="@string/credito_traductor_1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/_red" />
            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.asdevel.bullscows2.ui.widgets.TextViewHand
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/credito_team"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/_gray_darker" />

                <com.asdevel.bullscows2.ui.widgets.TextViewHand
                    android:id="@+id/site_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/team_name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/_red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.asdevel.bullscows2.ui.widgets.TextViewHand
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/credito_contacto"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/_gray_darker" />

                <com.asdevel.bullscows2.ui.widgets.TextViewHand
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingBottom="10dp"
                    android:id="@+id/contact1_link"
                    android:text="@string/credito_contacto_1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/_red" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.asdevel.bullscows2.ui.widgets.TextViewHand
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/credito_personajes"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/_gray_darker" />

                <com.asdevel.bullscows2.ui.widgets.TextViewHand
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingBottom="10dp"

                    android:text="@string/credito_personajes1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/_red" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>