<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentPanel"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:paddingBottom="3dip"
    android:paddingEnd="1dip"
    android:paddingLeft="9dp"
    android:paddingRight="9dp"
    android:paddingStart="3dip"
    android:paddingTop="9dip">

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="54dip"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/title_template"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9dip"
            android:layout_marginEnd="10dip"
            android:layout_marginStart="10dip"
            android:layout_marginTop="6dip"
            android:gravity="center_vertical">

            <com.asdevel.bullscows2.ui.widgets.TextViewHand
                android:id="@+id/alertTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/box_time_steps"
                android:ellipsize="end"
                android:text="@string/title_ganador"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/_red" />

            <LinearLayout
                android:id="@+id/box_time_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="right"
                android:orientation="horizontal">

                <com.asdevel.bullscows2.ui.widgets.TextViewHand
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textColor="@color/_gray_darker"
                    android:textSize="20sp" />

                <com.asdevel.bullscows2.ui.widgets.TextViewClock
                    android:id="@+id/time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/_red"
                    android:textSize="22sp" />

                <com.asdevel.bullscows2.ui.widgets.TextViewHand
                    android:id="@+id/steps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/steps"
                    android:textColor="@color/_gray_darker"
                    android:textSize="20sp" />

                <com.asdevel.bullscows2.ui.widgets.TextViewHand
                    android:id="@+id/steps_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/_red"
                    android:textSize="22sp" />
            </LinearLayout>
        </RelativeLayout>


        <com.asdevel.bullscows2.ui.widgets.TextViewHand

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:ellipsize="end"
            android:text="@string/ingrese_nombre"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/_gray_darker" />

        <!-- If the client uses a customTitle, it will be added here. -->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contentPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:src="@color/_gray_dark" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp">

            <com.asdevel.bullscows2.ui.widgets.EditTextHand
                android:id="@+id/name"
                style="@style/AppTheme.EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical|left"
                android:hint="@string/nombre"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:textColor="@color/_red" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:src="@color/_gray_dark" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="54dip"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="2dip"
            android:paddingTop="4dip">


            <com.asdevel.bullscows2.ui.widgets.ButtonHand
                android:id="@+id/button_ok"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                android:background="@drawable/button"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/enviar"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/label_button_red_color"
                android:textStyle="bold" />


            <com.asdevel.bullscows2.ui.widgets.ButtonHand
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/button"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/cancelar"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/label_button_red_color"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>